--- a/index.yaml
+++ b/index.yaml
@@ -1,10 +1,3 @@
 apiVersion: v1
-entries:
-  eric-sec-sip-tls-crd:
-    - created: 2021-09-30T13:44:20.106510817+05:30
-      description: Deploy a sip crd pod      
-      name: eric-sec-sip-tls-crd
-      urls:
-      - https://github.com/jagan4ru/eai-19-repo/blob/main/eric-sec-sip-tls-crd-2.2.0%2B30.tgz                 
-      version: 2.2.0+30
+entries: {}
 generated: "2021-09-30T13:45:36.106510817+05:30"
